project-details link added

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         </ul>
         <div class="navigation-active-masonry isotope-navigation portfolio-v2 masonry-grid">
           <div class="grid-item portfolio-1 portfolio-2">
-            <a href="portfolio-details.html" class="project-card d-block">
+            <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
                 <img src="./image/meso-1.png" alt="card" class="object-image">
               </div>
@@ -433,7 +433,7 @@
             </a>
           </div>
           <div class="grid-item  portfolio-1 portfolio-3 grid-item--height2 grid-item--width2">
-            <a href="portfolio-details.html" class="project-card d-block">
+            <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
                 <img src="./image/meso-0.png" alt="card" class="object-image">
               </div>
@@ -452,7 +452,7 @@
             </a>
           </div>
           <div class="grid-item portfolio-1 portfolio-2">
-            <a href="portfolio-details.html" class="project-card d-block">
+            <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
                 <img src="./image/meso-3.png" alt="card" class="object-image">
               </div>
@@ -471,7 +471,7 @@
             </a>
           </div>
           <div class="grid-item portfolio-2 portfolio-3">
-            <a href="portfolio-details.html" class="project-card d-block">
+            <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
                 <img src="./image/meso-2.png" alt="card" class="object-image">
               </div>
@@ -490,7 +490,7 @@
             </a>
           </div>
           <div class="grid-item portfolio-1 portfolio-2">
-            <a href="portfolio-details.html" class="project-card d-block">
+            <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
                 <img src="./image/meso-4.png" alt="card" class="object-image">
               </div>
