project-details navbar link updated

--- a/project-details.html
+++ b/project-details.html
@@ -43,7 +43,7 @@
     <div class="">
       <nav class="navbar site-navbar border-none">
         <div class="brand">
-          <a href="#" class="brand-link">
+          <a href="./index.html" class="brand-link">
             <img class="brand-logo" src="./image/logo.svg" alt="logo">
           </a>
         </div>
@@ -51,7 +51,7 @@
           <div class="menu-overlay"></div>
           <nav class="menu-block" id="append-menu-header">
             <div class="mobile-menu-head">
-              <a href="index.html">
+              <a href="./index.html">
                 <img src="./image/logo-dark.svg" alt="brand logo">
               </a>
               <div class="current-menu-title"></div>
@@ -59,14 +59,14 @@
             </div>
             <ul class="site-menu-main">
               <li class="nav-item nav-item-has-children">
-                <a href="#" class="nav-link-item drop-trigger">HOME</a>
+                <a href="./index.html" class="nav-link-item drop-trigger">HOME</a>
               </li>
               <li class="nav-item">
-                <a href="#about" class="nav-link-item drop-trigger">ABOUT
+                <a href="./index.html#about" class="nav-link-item drop-trigger">ABOUT
                 </a>
               </li>
               <li class="nav-item nav-item-has-children">
-                <a href="#services" class="nav-link-item drop-trigger">SERVICES</a>
+                <a href="./index.html#services" class="nav-link-item drop-trigger">SERVICES</a>
               </li>
               <!-- <li class="nav-item nav-item-has-children">
                 <a href="#" class="nav-link-item drop-trigger">Blog<i class="fas fa-angle-down"></i>
@@ -82,15 +82,15 @@
                 </div>
               </li> -->
               <li class="nav-item">
-                <a href="#our_works" class="nav-link-item drop-trigger">OUR WORK
+                <a href="./index.html#our_works" class="nav-link-item drop-trigger">OUR WORK
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#clients" class="nav-link-item drop-trigger">CLIENTS
+                <a href="./index.html#clients" class="nav-link-item drop-trigger">CLIENTS
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#get_in_touch" class="btn btn-primary hvr-fill-black get-in-touch-mobile d-block d-md-none">Get in touch
+                <a href="./index.html#get_in_touch" class="btn btn-primary hvr-fill-black get-in-touch-mobile d-block d-md-none">Get in touch
                   <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
                 </a>
               </li>
