--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             </div>
           </div>
         </div>
-        <div class="hero-slide-single bg-image overlay-07" style="background-image: url(image/hero/hero-background.png);">
+        <div class="hero-slide-single bg-image overlay-07" style="background-image: url(image/hero/hero-background-2.jpg);">
           <div class="container">
             <div class="row justify-content-center align-items-center">
               <div class="col-xxl-10 col-md-9" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
@@ -295,7 +295,7 @@
             </div>
           </div>
         </div>
-        <div class="hero-slide-single bg-image overlay-07" style="background-image: url(image/hero/hero-background.png);">
+        <div class="hero-slide-single bg-image overlay-07" style="background-image: url(image/hero/hero-background-3.jpg);">
           <div class="container">
             <div class="row justify-content-center align-items-center">
               <div class="col-xxl-10 col-md-9" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
@@ -529,7 +529,7 @@
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Award Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-    <div id="our_works" class="award-section bg-award text-white section-padding-120">
+    <!-- <div id="our_works" class="award-section bg-award text-white section-padding-120">
       <div class="container">
         <div class="section-heading text-center mb-res-60">
           <span class="subtitle">What we achieved</span>
@@ -578,7 +578,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         Client Section 
@@ -597,8 +597,17 @@
             <div class="col-xxl-4 col-lg-4 col-md-12">
               <img src="./image/client-2.webp" alt="">
             </div>
-            <div class="col-xxl-4 col-lg-4 col-md-12">
+            <div class="col-xxl-4 col-lg-4 col-md-12 mb-lg-3">
               <img src="./image/client-3.webp" alt="">
+            </div>
+            <div class="col-xxl-4 col-lg-4 col-md-12">
+              <img src="./image/client-6.webp" alt="">
+            </div>
+            <div class="col-xxl-4 col-lg-4 col-md-12">
+              <img src="./image/client-5.webp" alt="">
+            </div>
+            <div class="col-xxl-4 col-lg-4 col-md-12">
+              <img src="./image/client-4.webp" alt="">
             </div>
           </div>
         </div>
@@ -841,7 +850,7 @@
               </form>
             </div>
           </div>
-          <div class="offset-xl-2 col-xl-6 offset-lg-1 col-lg-6">
+          <!-- <div class="offset-xl-2 col-xl-6 offset-lg-1 col-lg-6">
             <div class="row row--list-block">
               <div class="col-auto">
                 <div class="footer-contact-block">
@@ -886,7 +895,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="copyright-block padding-top-140">
