tuning change as per client requirements

--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                         WE ARE A YOUNG & CREATIVE POST-PRODUCTION COMPANY
                     </h1>
                     <p>
-                        At ZONE PRODUCTIONS, we are more than just a post-production company. we also have expertise in shooting special events. <br>
-                        Based in Atlanta, GA, our services extend beyond the post-production realm.
+                      At ZONE PRODUCTIONS we specialize in creating Film and TV series Promo Trailers and Color Grading. Based in Atlanta, GA, We will visually elevate your narratives by transforming your footage into extraordinary experiences. 
+                      <br> At ZONE PRODUCTIONS, we are more than just a post-production company. We also have expertise in shooting special moments and events.
                     </p>
                   </div>
                   <div class="hero-content_button-group">
@@ -397,20 +397,20 @@
           <li data-filter="*">
             <button class="btn-reset active">Show All</button>
           <li data-filter=".portfolio-1">
-            <button class="btn-reset">Trailer</button>
+            <button class="btn-reset">TRAILERS</button>
           </li>
           <li data-filter=".portfolio-2">
-            <button class="btn-reset">3D</button>
+            <button class="btn-reset">COLOR GRADING</button>
           </li>
           <li data-filter=".portfolio-3">
-            <button class="btn-reset">Video Editing</button>
+            <button class="btn-reset">SPECIAL MOMENTS</button>
           </li>
-          <li data-filter=".portfolio-3">
+          <!-- <li data-filter=".portfolio-3">
             <button class="btn-reset">Motion Design</button>
           </li>
           <li data-filter=".portfolio-3">
             <button class="btn-reset">Color Correction</button>
-          </li>
+          </li> -->
         </ul>
         <div class="navigation-active-masonry isotope-navigation portfolio-v2 masonry-grid">
           <div class="grid-item portfolio-1 portfolio-2">
@@ -606,8 +606,11 @@
             <div class="col-xxl-4 col-lg-4 col-md-12">
               <img src="./image/client-5.webp" alt="">
             </div>
-            <div class="col-xxl-4 col-lg-4 col-md-12">
+            <div class="col-xxl-4 col-lg-4 col-md-12 mb-lg-3">
               <img src="./image/client-4.webp" alt="">
+            </div>
+            <div class="offset-xl-4 col-xxl-4 col-lg-4 col-md-12">
+              <img src="./image/client-7.png" alt="">
             </div>
           </div>
         </div>
