--- a/project-details.html
+++ b/project-details.html
@@ -382,7 +382,7 @@
             </form>
           </div>
         </div>
-        <div class="offset-xl-2 col-xl-6 offset-lg-1 col-lg-6">
+        <!-- <div class="offset-xl-2 col-xl-6 offset-lg-1 col-lg-6">
           <div class="row row--list-block">
             <div class="col-auto">
               <div class="footer-contact-block">
@@ -427,7 +427,7 @@
               </ul>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="copyright-block padding-top-140">
