tuning change as per client requirements

--- a/index.html
+++ b/index.html
@@ -427,7 +427,15 @@
                   <span class="project-card__date">2019</span>
                 </div>
                 <div class="project-card__body-bottom">
-                  <span class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <!-- <div class="hero-video-block position-relative">
+                    <img src="./image/video-bg.png" alt=" video" class="w-100">
+                    <a href="https://www.youtube.com/watch?v=zo9dJFo8H8g" data-fancybox class="btn-play sonar-emitter absolute-center btn-play ">
+                      <i class="fa-solid fa-play"></i>
+                    </a>
+                  </div> -->
+                  <span href="https://www.youtube.com/watch?v=zo9dJFo8H8g" data-fancybox class="project-card__button  hvr-fill-black">
+                    view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
+                  </span>
                 </div>
               </div>
             </a>
@@ -446,7 +454,7 @@
                   <span class="project-card__date">2019</span>
                 </div>
                 <div class="project-card__body-bottom">
-                  <span class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://player.vimeo.com/video/849766532" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -465,7 +473,7 @@
                   <span class="project-card__date">2019</span>
                 </div>
                 <div class="project-card__body-bottom">
-                  <span class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://vimeo.com/849766532" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -484,7 +492,7 @@
                   <span class="project-card__date">2019</span>
                 </div>
                 <div class="project-card__body-bottom">
-                  <span class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://vimeo.com/849766532" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -503,7 +511,7 @@
                   <span class="project-card__date">2019</span>
                 </div>
                 <div class="project-card__body-bottom">
-                  <span class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://vimeo.com/849766532" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
