tuning change as per client requirements

--- a/project-details.html
+++ b/project-details.html
@@ -44,7 +44,7 @@
       <nav class="navbar site-navbar border-none">
         <div class="brand">
           <a href="./index.html" class="brand-link">
-            <img class="brand-logo" src="./image/logo.svg" alt="logo">
+            <img class="brand-logo" src="./image/logo-lg.png" alt="logo">
           </a>
         </div>
         <div class="menu-block-wrapper ">
@@ -437,22 +437,22 @@
             <p>© 2023 Favdevs</p>
           </div>
           <ul class="divider-navigation-inline footer-social-list">
-            <li>
+            <!-- <li>
               <a href="#">
                 <i class="fa-brands fa-square-facebook"></i>
                 <span>Facebook</span>
               </a>
-            </li>
+            </li> -->
             <li>
               <a href="#">
-                <i class="fa-brands fa-twitter"></i>
-                <span>Twitter</span>
+                <i class="fa-brands fa-vimeo"></i>
+                <span>vimeo</span>
               </a>
             </li>
             <li>
               <a href="#">
-                <i class="fa-brands fa-youtube"></i>
-                <span>Youtube</span>
+                <i class="fa-brands fa-instagram"></i>
+                <span>Instagram</span>
               </a>
             </li>
           </ul>
