--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <nav class="navbar site-navbar border-none">
           <div class="brand">
             <a href="#" class="brand-link">
-              <img class="brand-logo" src="./image/logo.svg" alt="logo">
+              <img class="brand-logo" src="./image/logo-lg.png" alt="logo">
             </a>
           </div>
           <div class="menu-block-wrapper ">
@@ -325,13 +325,13 @@
       </div>
       <div class="hero-fluid-slider-navigation" id="heroSliderNav">
         <div class="single-nav">
-          <span>01. Home Renovation</span>
+          <span>Trailers</span>
         </div>
         <div class="single-nav">
-          <span>02. Home Renovation</span>
+          <span>Film and TV</span>
         </div>
         <div class="single-nav">
-          <span>03. Home Renovation</span>
+          <span>Special Moments</span>
         </div>
       </div>
     </div>
@@ -658,9 +658,16 @@
                 </button>
                 <div id="faq-item" class="accordion-collapse collapse show" data-bs-parent="#faq">
                   <div class="accordion-item__body">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vitae
-                    magna pulvinar laoreet. Nullam erat ipsum, mattis nec mollis a enim Nunc at
-                    euismod arcu. Aliquam ullamcorper
+                    At [Your Post Production Company Name], we are dedicated to bringing your artistic vision to
+                    life. Our team of passionate post-production experts shares your commitment to cinematic
+                    excellence. Together, we'll refine your visuals, perfect your soundscapes, and weave together
+                    the elements that make your film a true masterpiece.
+                    If you're an indie high art filmmaker ready to embark on a transformative post-production
+                    journey, we invite you to join us at [Your Post Production Company Name]. Let's collaborate
+                    and create something truly extraordinary.
+                    By crafting a detailed and evocative description of your ideal clients, you'll attract filmmakers
+                    who resonate with your company's values and are eager to collaborate on projects that align
+                    with their artistic aspirations.
                   </div>
                 </div>
               </div>
@@ -670,8 +677,14 @@
                 </button>
                 <div id="faq-item-2" class="accordion-collapse collapse" data-bs-parent="#faq">
                   <div class="accordion-item__body">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vitae magna pulvinar laoreet.
-                    Nullam erat ipsum, mattis nec mollis a enim Nunc at euismod arcu. Aliquam ullamcorper
+                    <ul>
+                      <li>Video Editing</li>
+                      <li>Dialogue Editing</li>
+                      <li>Sound Editing</li>
+                      <li>Motion Graphics</li>
+                      <li>Color Grading/Correcting</li>
+                      <li>Finishing</li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -681,8 +694,13 @@
                 </button>
                 <div id="faq-item-3" class="accordion-collapse collapse" data-bs-parent="#faq">
                   <div class="accordion-item__body">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vitae magna pulvinar laoreet.
-                    Nullam erat ipsum, mattis nec mollis a enim Nunc at euismod arcu. Aliquam ullamcorper
+                    We specialize in filming musical artists or events centered around music.
+                    Services include:
+                    <ul>
+                      <li>Multicam 4K/6K cinematic video</li>
+                      <li>High quality audio</li>
+                      <li>Full post production which includes video, audio, and color editing.</li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -692,8 +710,11 @@
                 </button>
                 <div id="faq-item-4" class="accordion-collapse collapse" data-bs-parent="#faq">
                   <div class="accordion-item__body">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempus vitae magna pulvinar laoreet.
-                    Nullam erat ipsum, mattis nec mollis a enim Nunc at euismod arcu. Aliquam ullamcorper
+                    <ul>
+                      <li>30 second trailer</li>
+                      <li>60 second trailer</li>
+                      <li>and 90 minute trailer</li>
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -916,22 +937,22 @@
               <p>© 2023 Favdevs</p>
             </div>
             <ul class="divider-navigation-inline footer-social-list">
-              <li>
+              <!-- <li>
                 <a href="#">
                   <i class="fa-brands fa-square-facebook"></i>
                   <span>Facebook</span>
                 </a>
-              </li>
+              </li> -->
               <li>
                 <a href="#">
-                  <i class="fa-brands fa-twitter"></i>
-                  <span>Twitter</span>
+                  <i class="fa-brands fa-vimeo"></i>
+                  <span>vimeo</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <i class="fa-brands fa-youtube"></i>
-                  <span>Youtube</span>
+                  <i class="fa-brands fa-instagram"></i>
+                  <span>Instagram</span>
                 </a>
               </li>
             </ul>
