--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
                   <img src="./image/logo.svg" alt="image alt">
                 </div>
                 <p>
-                  Museums, markets, reindeer landscapes and dollhouses get the same care and attention to purpose.
+                  High-End Visuals, Cinematic Sound.
                 </p>
               </div>
               <form action="#" class="newsletter-form-1">
@@ -934,7 +934,7 @@
         <div class="container">
           <div class="copyright-row">
             <div class="copyright-text">
-              <p>© 2023 Favdevs</p>
+              <p>© 2023 BY ZONE PRODUCTIONS.</p>
             </div>
             <ul class="divider-navigation-inline footer-social-list">
               <!-- <li>
