--- a/index.html
+++ b/index.html
@@ -427,20 +427,15 @@
                   <span class="project-card__date">2019</span>
                 </div>
                 <div class="project-card__body-bottom">
-                  <!-- <div class="hero-video-block position-relative">
-                    <img src="./image/video-bg.png" alt=" video" class="w-100">
-                    <a href="https://www.youtube.com/watch?v=zo9dJFo8H8g" data-fancybox class="btn-play sonar-emitter absolute-center btn-play ">
-                      <i class="fa-solid fa-play"></i>
-                    </a>
-                  </div> -->
-                  <span href="https://www.youtube.com/watch?v=zo9dJFo8H8g" data-fancybox class="project-card__button  hvr-fill-black">
+                  <span href="https://youtu.be/pvoYLXJw-H0" data-fancybox class="project-card__button  hvr-fill-black">
                     view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
                   </span>
                 </div>
               </div>
             </a>
           </div>
-          <div class="grid-item  portfolio-1 portfolio-3 grid-item--height2 grid-item--width2">
+          <!-- grid-item--height2 grid-item--width2 -->
+          <div class="grid-item  portfolio-1 portfolio-3">
             <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
                 <img src="./image/meso-0.png" alt="card" class="object-image">
@@ -454,7 +449,7 @@
                   <span class="project-card__date">2019</span>
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://player.vimeo.com/video/849766532" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://youtu.be/kueRUAkN3GM" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -473,7 +468,7 @@
                   <span class="project-card__date">2019</span>
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://vimeo.com/848027482" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://youtu.be/llbIQ7ez_UE" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -492,7 +487,65 @@
                   <span class="project-card__date">2019</span>
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://vimeo.com/818195463" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://youtu.be/60xyQ_rEpwI" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="grid-item portfolio-1 portfolio-3">
+            <a href="./project-details.html" class="project-card d-block">
+              <div class="project-card__image">
+                <img src="./image/meso-4.png" alt="card" class="object-image">
+              </div>
+              <div class="project-card__body">
+                <div class="project-card__body-top">
+                  <div class="project-card__body-texts">
+                    <h3 class="project-card__title">Brutalist lobby</h3>
+                    <span class="project-card__category">building</span>
+                  </div>
+                  <span class="project-card__date">2019</span>
+                </div>
+                <div class="project-card__body-bottom">
+                  <span href="https://youtu.be/zshummlVhs4" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="grid-item portfolio-2 portfolio-3">
+            <a href="./project-details.html" class="project-card d-block">
+              <div class="project-card__image">
+                <img src="./image/meso-5.jpg" alt="card" class="object-image">
+              </div>
+              <div class="project-card__body">
+                <div class="project-card__body-top">
+                  <div class="project-card__body-texts">
+                    <h3 class="project-card__title">Brutalist lobby</h3>
+                    <span class="project-card__category">building</span>
+                  </div>
+                  <span class="project-card__date">2019</span>
+                </div>
+                <div class="project-card__body-bottom">
+                  <span href="https://youtu.be/e83Fnt8vRvU" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="grid-item portfolio-1 portfolio-2">
+            <a href="./project-details.html" class="project-card d-block">
+              <div class="project-card__image">
+                <img src="./image/meso-6.jpg" alt="card" class="object-image">
+              </div>
+              <div class="project-card__body">
+                <div class="project-card__body-top">
+                  <div class="project-card__body-texts">
+                    <h3 class="project-card__title">Brutalist lobby</h3>
+                    <span class="project-card__category">building</span>
+                  </div>
+                  <span class="project-card__date">2019</span>
+                </div>
+                <div class="project-card__body-bottom">
+                  <span href="https://youtu.be/SS4NBmDYOI4" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
@@ -511,7 +564,7 @@
                   <span class="project-card__date">2019</span>
                 </div>
                 <div class="project-card__body-bottom">
-                  <span href="https://vimeo.com/805373736" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
+                  <span href="https://youtu.be/D8GE_IFm1S4" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
                 </div>
               </div>
             </a>
