tuning change as per client requirements (design updated)

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
           <div class="grid-item portfolio-1 portfolio-2">
             <a href="./project-details.html" class="project-card d-block">
               <div class="project-card__image">
-                <img src="./image/meso-4.png" alt="card" class="object-image">
+                <img src="./image/grading.png" alt="card" class="object-image">
               </div>
               <div class="project-card__body">
                 <div class="project-card__body-top">
