get in touch circle button linked

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
               <div class="hero-content__navigation-circle-wrapper">
                 <div class="hero-content__navigation-circle">
                   <img src="./image/home-1/navigation-image.png" alt="" class="w-100">
-                  <a href="./contact.html" class="hero-content__navigation-circle-text d-block">
+                  <a href="#get_in_touch" class="hero-content__navigation-circle-text d-block">
                     <img src="./image/home-1/text-circle.png" alt="text circle" class="w-100">
                   </a>
                 </div>
