--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
     </div>
     <!--Testimonial Section 02
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <div class="testimonial-section-02 overlay bg-fixed section-padding-140" style="background-image:url('image/home-1/testimonial-background.png')">
+    <!-- <div class="testimonial-section-02 overlay bg-fixed section-padding-140" style="background-image:url('image/home-1/testimonial-background.png')">
       <div class="container">
         <div class="row gutter-y-default justify-content-center justify-content-md-start">
           <div class="col-lg-4 col-md-6 col-sm-10" data-aos-duration="1000" data-aos="fade-right">
@@ -841,7 +841,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Contact Section used in Home 2
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
