mail added and issues fixed

--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@
       </div>
       <div class="hero-fluid-slider-navigation" id="heroSliderNav">
         <div class="single-nav">
-          <span>Trailers</span>
+          <span>Trailers/Promo</span>
         </div>
         <div class="single-nav">
-          <span>Film and TV</span>
+          <span>Color Grading</span>
         </div>
         <div class="single-nav">
           <span>Special Moments</span>
@@ -365,7 +365,7 @@
                 </div>
               </div>
             </div>
-            <div class="hero-content__details">
+            <div class="hero-content__details" id="services">
               <div class="content__details-left">
                 <img class="trailers" src="./image/trailers.png" alt="img">
                 <div class="details-content">
@@ -391,7 +391,7 @@
     <!--~~~~~~~~~~~~~~~~~~~~~~~~
     Project Section 02
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <div id="services" class="project-section section-padding">
+    <div id="our_works" class="project-section section-padding">
       <div class="container-fluid portfolio-container">
         <ul class="navigation-list navigation-list--inline divider-navigation-inline justify-content-center mb-res-60">
           <li data-filter="*">
@@ -683,7 +683,7 @@
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     FAQ Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-    <div class="faq-section section-padding-80" id="faq-section">
+    <div class="faq-section section-padding-80">
       <div class="container">
         <div class="row row--custom gutter-y-40 ">
           <div class="col-xxl-4 col-lg-5 col-md-9">
@@ -859,7 +859,7 @@
               <h2 class="content-title heading-md mb-32">Contact our support team to grow your business</h2>
             </div>
             <div class="contact-form">
-              <form action="/">
+              <form action="https://formspree.io/f/xknlbrzg" method="POST">
                 <div class="row gutter-y-default">
                   <div class="col-lg-6">
                     <input type="text" placeholder="Full Name" class="form-control">
@@ -929,7 +929,7 @@
                   High-End Visuals, Cinematic Sound.
                 </p>
               </div>
-              <form action="#" class="newsletter-form-1">
+              <form action="https://formspree.io/f/xknlbrzg" method="POST" class="newsletter-form-1">
                 <input type="email" placeholder="Enter your email" class="form-control">
                 <button class="submit-button icon-arrow-corner text-primary btn-reset"><i class="fa-solid fa-arrow-right"></i></button>
               </form>
@@ -997,13 +997,13 @@
                 </a>
               </li> -->
               <li>
-                <a href="#">
+                <a href="https://vimeo.com/848027482">
                   <i class="fa-brands fa-vimeo"></i>
                   <span>vimeo</span>
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://www.instagram.com/zoneproductionstudios/">
                   <i class="fa-brands fa-instagram"></i>
                   <span>Instagram</span>
                 </a>
