--- a/project-details.html
+++ b/project-details.html
@@ -376,7 +376,7 @@
                 High-End Visuals, Cinematic Sound.
               </p>
             </div>
-            <form action="#" class="newsletter-form-1">
+            <form action="https://formspree.io/f/xknlbrzg" method="POST" class="newsletter-form-1">
               <input type="email" placeholder="Enter your email" class="form-control">
               <button class="submit-button icon-arrow-corner text-primary btn-reset"><i class="fa-solid fa-arrow-right"></i></button>
             </form>
