--- a/project-details.html
+++ b/project-details.html
@@ -444,13 +444,13 @@
               </a>
             </li> -->
             <li>
-              <a href="#">
+              <a href="https://vimeo.com/zoneproductionstudios">
                 <i class="fa-brands fa-vimeo"></i>
                 <span>vimeo</span>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="https://www.instagram.com/zoneproductionstudios/">
                 <i class="fa-brands fa-instagram"></i>
                 <span>Instagram</span>
               </a>
