vimeo link updated and background change

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
     <div class="hero-section-02">
       <div class="hero-fluid-slider" id="heroSlider">
-        <div class="hero-slide-single bg-image overlay-07" style="background-image: url(image/hero/hero-background.png);">
+        <div class="hero-slide-single bg-image overlay-07" style="background-image: url(image/gif-bg.gif);">
           <div class="container">
             <div class="row justify-content-center align-items-center">
               <div class="col-xxl-10 col-md-9" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
@@ -283,10 +283,10 @@
                     </p>
                   </div>
                   <div class="hero-content_button-group">
-                    <a href="./contact.html" class="btn btn-primary hvr-fill-black">Get in touch
+                    <a href="#get_in_touch" class="btn btn-primary hvr-fill-black">Get in touch
                       <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
                     </a>
-                    <a href="#" class="btn btn-white hvr-white-primary">our works
+                    <a href="#our_works" class="btn btn-white hvr-white-primary">our works
                       <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
                     </a>
                   </div>
@@ -295,7 +295,7 @@
             </div>
           </div>
         </div>
-        <div class="hero-slide-single bg-image overlay-07" style="background-image: url(https://vimeo.com/848027482);">
+        <div class="hero-slide-single bg-image overlay-07" style="background-image: url(image/hero/hero-background.png);">
           <div class="container">
             <div class="row justify-content-center align-items-center">
               <div class="col-xxl-10 col-md-9" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
@@ -310,10 +310,10 @@
                     </p>
                   </div>
                   <div class="hero-content_button-group">
-                    <a href="./contact.html" class="btn btn-primary hvr-fill-black">Get in touch
+                    <a href="#get_in_touch" class="btn btn-primary hvr-fill-black">Get in touch
                       <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
                     </a>
-                    <a href="#" class="btn btn-white hvr-white-primary">our works
+                    <a href="#our_works" class="btn btn-white hvr-white-primary">our works
                       <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
                     </a>
                   </div>
