--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <nav class="menu-block" id="append-menu-header">
               <div class="mobile-menu-head">
                 <a href="index.html">
-                  <img src="./image/logo-dark.svg" alt="brand logo">
+                  <img src="./image/logo-lg.png" alt="brand logo" style="filter: invert(1);height: 100px;width: 180px;">
                 </a>
                 <div class="current-menu-title"></div>
                 <div class="mobile-menu-close">&times;</div>
@@ -192,7 +192,7 @@
           <div class="offcanvas-body-text" id="offcanvasExampleLabel">
             <div class="brand">
               <a href="#" class="brand-link">
-                <img class="brand-logo" src="./image/logo-dark.svg" alt="logo">
+                <img class="brand-logo" src="./image/logo-lg.png" alt="logo">
               </a>
             </div>
             <p>
@@ -241,11 +241,11 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
     <div class="hero-section-02">
       <div class="hero-fluid-slider" id="heroSlider">
-        <div class="hero-slide-single bg-image overlay-07" style="background-image: url(image/gif-bg.gif);">
+        <div class="hero-slide-single bg-image overlay-07 video-bg-mobile" style="background-image: url(image/gif-bg.gif);">
           <div class="container">
             <div class="row justify-content-center align-items-center">
               <div class="col-xxl-10 col-md-9" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
-                <div class="hero-content">
+                <div class="hero-content d-md-block d-none">
                   <div class="hero-content_text-block">
                     <h1 class="hero-content__title heading-xxl text-sand">
                         WE ARE A YOUNG & CREATIVE POST-PRODUCTION COMPANY
@@ -256,6 +256,25 @@
                     </p>
                   </div>
                   <div class="hero-content_button-group">
+                    <a href="#get_in_touch" class="btn btn-primary hvr-fill-black">Get in touch
+                      <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
+                    </a>
+                    <a href="#our_works" class="btn btn-white hvr-white-primary">our works
+                      <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
+                    </a>
+                  </div>
+                </div>
+                <div class="hero-content-mobile d-block d-md-none">
+                  <div class="hero-content_text-block">
+                    <h1 class="hero-content__title heading-xxl text-sand hero-content-mobile-heading">
+                        WE ARE A YOUNG & CREATIVE POST-PRODUCTION COMPANY
+                    </h1>
+                    <p class="hero-content-mobile-details">
+                      At ZONE PRODUCTIONS we specialize in creating Film and TV series Promo Trailers and Color Grading. Based in Atlanta, GA, We will visually elevate your narratives by transforming your footage into extraordinary experiences. 
+                      <br> At ZONE PRODUCTIONS, we are more than just a post-production company. We also have expertise in shooting special moments and events.
+                    </p>
+                  </div>
+                  <div class="hero-content_button-group hero-content_button-group-mobile">
                     <a href="#get_in_touch" class="btn btn-primary hvr-fill-black">Get in touch
                       <i class="fa-solid fa-arrow-right icon-arrow-corner"></i>
                     </a>
@@ -667,7 +686,7 @@
             <div class="col-xxl-4 col-lg-4 col-md-12">
               <img src="./image/client-5.webp" alt="">
             </div>
-            <div class="col-xxl-4 col-lg-4 col-md-12 mb-lg-3">
+            <div class="col-xxl-4 col-lg-4 col-md-12 mb-lg-3 text-center">
               <img src="./image/client-4.webp" alt="">
             </div>
             <div class="offset-xl-4 col-xxl-4 col-lg-4 col-md-12">
@@ -771,7 +790,7 @@
                   </div>
                 </div>
               </div>
-              <div class="accordion-item">
+              <!--<div class="accordion-item">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-item-5" aria-expanded="false" aria-controls="faq-item-5">
                   Will you be able to help the style of video I want?
                 </button>
@@ -792,7 +811,7 @@
                     Nullam erat ipsum, mattis nec mollis a enim Nunc at euismod arcu. Aliquam ullamcorper
                   </div>
                 </div>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
