--- a/project-details.html
+++ b/project-details.html
@@ -52,7 +52,7 @@
           <nav class="menu-block" id="append-menu-header">
             <div class="mobile-menu-head">
               <a href="./index.html">
-                <img src="./image/logo-dark.svg" alt="brand logo">
+                <img src="./image/logo-lg.png" alt="brand logo" style="filter: invert(1);height: 100px;width: 180px;">
               </a>
               <div class="current-menu-title"></div>
               <div class="mobile-menu-close">&times;</div>
