--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <div class="hero-fluid-slider" id="heroSlider">
         <div class="hero-slide-single bg-image overlay-07 video-bg-mobile" style="background-image: url(image/gif-bg.gif);">
           <div class="container">
-            <div class="row justify-content-center align-items-center">
+            <!--<div class="row justify-content-center align-items-center">
               <div class="col-xxl-10 col-md-9" data-aos-duration="1000" data-aos="fade-up" data-aos-delay="300">
                 <div class="hero-content d-md-block d-none">
                   <div class="hero-content_text-block">
@@ -284,7 +284,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="hero-slide-single bg-image overlay-07" style="background-image: url(image/hero/hero-background-2.jpg);">
@@ -440,10 +440,10 @@
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Brutalist lobby</h3>
-                    <span class="project-card__category">building</span>
+                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <span class="project-card__category">trailer</span>
                   </div>
-                  <span class="project-card__date">2019</span>
+                  <span class="project-card__date">2020</span>
                 </div>
                 <div class="project-card__body-bottom">
                   <span href="https://youtu.be/pvoYLXJw-H0" data-fancybox class="project-card__button  hvr-fill-black">
@@ -462,8 +462,8 @@
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Brutalist lobby</h3>
-                    <span class="project-card__category">building</span>
+                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <span class="project-card__category">Color grading</span>
                   </div>
                   <span class="project-card__date">2019</span>
                 </div>
@@ -481,10 +481,10 @@
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Brutalist lobby</h3>
-                    <span class="project-card__category">building</span>
+                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <span class="project-card__category">Special Moments</span>
                   </div>
-                  <span class="project-card__date">2019</span>
+                  <span class="project-card__date">2021</span>
                 </div>
                 <div class="project-card__body-bottom">
                   <span href="https://youtu.be/llbIQ7ez_UE" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
@@ -500,8 +500,8 @@
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Brutalist lobby</h3>
-                    <span class="project-card__category">building</span>
+                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <span class="project-card__category">Special Moments</span>
                   </div>
                   <span class="project-card__date">2019</span>
                 </div>
@@ -519,10 +519,10 @@
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Brutalist lobby</h3>
-                    <span class="project-card__category">building</span>
+                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <span class="project-card__category">Color grading</span>
                   </div>
-                  <span class="project-card__date">2019</span>
+                  <span class="project-card__date">2022</span>
                 </div>
                 <div class="project-card__body-bottom">
                   <span href="https://youtu.be/zshummlVhs4" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
@@ -539,8 +539,8 @@
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Brutalist lobby</h3>
-                    <span class="project-card__category">building</span>
+                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <span class="project-card__category">trailer</span>
                   </div>
                   <span class="project-card__date">2019</span>
                 </div>
@@ -558,10 +558,10 @@
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Brutalist lobby</h3>
-                    <span class="project-card__category">building</span>
+                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <span class="project-card__category">trailer</span>
                   </div>
-                  <span class="project-card__date">2019</span>
+                  <span class="project-card__date">2021</span>
                 </div>
                 <div class="project-card__body-bottom">
                   <span href="https://youtu.be/SS4NBmDYOI4" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
@@ -577,10 +577,10 @@
               <div class="project-card__body">
                 <div class="project-card__body-top">
                   <div class="project-card__body-texts">
-                    <h3 class="project-card__title">Brutalist lobby</h3>
-                    <span class="project-card__category">building</span>
+                    <h3 class="project-card__title">Zone Production editing reel</h3>
+                    <span class="project-card__category">Color grading</span>
                   </div>
-                  <span class="project-card__date">2019</span>
+                  <span class="project-card__date">2020</span>
                 </div>
                 <div class="project-card__body-bottom">
                   <span href="https://youtu.be/D8GE_IFm1S4" data-fancybox class="project-card__button  hvr-fill-black">view details <i class="fa-solid fa-arrow-right icon-arrow-corner"></i></span>
