--- a/index.html
+++ b/index.html
@@ -670,27 +670,27 @@
           <h2 class="section-heading__title heading-md">We Proud of our Awards</h2>
         </div>
         <div class="award-content-wrapper">
-          <div class="row row--custom gutter-y-40 ">
-            <div class="col-xxl-4 col-lg-4 col-md-12">
-                <img src="./image/client-1.webp" alt="">
+          <div class="row row--custom gutter-y-40">
+            <div class="col-xxl-4 col-lg-4 col-md-12 text-center">
+                <img class="client-img-mobile" src="./image/client-1.webp" alt="">
             </div>
-            <div class="col-xxl-4 col-lg-4 col-md-12">
-              <img src="./image/client-2.webp" alt="">
-            </div>
-            <div class="col-xxl-4 col-lg-4 col-md-12 mb-lg-3">
-              <img src="./image/client-3.webp" alt="">
-            </div>
-            <div class="col-xxl-4 col-lg-4 col-md-12">
-              <img src="./image/client-6.webp" alt="">
-            </div>
-            <div class="col-xxl-4 col-lg-4 col-md-12">
-              <img src="./image/client-5.webp" alt="">
+            <div class="col-xxl-4 col-lg-4 col-md-12 text-center">
+              <img class="client-img-mobile" src="./image/client-2.webp" alt="">
             </div>
             <div class="col-xxl-4 col-lg-4 col-md-12 mb-lg-3 text-center">
-              <img src="./image/client-4.webp" alt="">
+              <img class="client-img-mobile" src="./image/client-3.webp" alt="">
             </div>
-            <div class="offset-xl-4 col-xxl-4 col-lg-4 col-md-12">
-              <img src="./image/client-7.png" alt="">
+            <div class="col-xxl-4 col-lg-4 col-md-12 text-center">
+              <img class="client-img-mobile" src="./image/client-6.webp" alt="">
+            </div>
+            <div class="col-xxl-4 col-lg-4 col-md-12 text-center">
+              <img class="client-img-mobile" src="./image/client-5.webp" alt="">
+            </div>
+            <div class="col-xxl-4 col-lg-4 col-md-12 mb-lg-3 text-center">
+              <img class="client-img-mobile" src="./image/client-4.webp" alt="">
+            </div>
+            <div class="offset-xl-4 col-xxl-4 col-lg-4 col-md-12 text-center">
+              <img class="client-img-mobile" src="./image/client-7.png" alt="">
             </div>
           </div>
         </div>
